[package]
name = "engage"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
unity = { version = "0.2.0", git = "https://github.com/DivineDragonFanClub/unity" }
modular-bitfield = "0.11.2"
once_cell = "1.17.0"
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
bitflags = "2.4.0"
